# Deep-Learning-Workshop

./: .gitignore  README.md  pyproject.toml  qa.sh  requirements.txt  setup.py
.github/workflows/: linting.yml  run_tests.yml  tests.yml  worflow_ci.yml  workflow_cicd.yml
LogisticRegression/: logistic_regression.py  logistic_regression_keras.py
LogisticRegression/examples/: cats_vs_dogs.py  submission.csv  titanic.py
LogisticRegression/examples/models/: titanic_model.npy
NeuralNetwork/: neural_network.py  neural_network_new.py  nn_coursera.py
NeuralNetwork/examples/: cat_vs_noncat.py  titanic.py
dl_workshop/: activation_functions.py  cost_functions.py  logistic_regression.py  neural_network.py  neural_network_new.py  parameters_initialisation.py  regularisation_functions.py
examples/BinaryClassification/: cat_vs_noncat_lr.py  cat_vs_noncat_nn.py  cat_vs_noncat_nn_new.py  titanic_lr.py  titanic_nn.py
examples/MulticlassClassification/: mnist_keras.py  mnist_nn.py
tests/: __init__.py  activation_functions_unittests.py  cost_functions_unittests.py  logistic_regression_tests.py  logistic_regression_unittests.py  neural_network_tests.py  parameters_initialisation_unittests.py  utils.py
utils/: activation_functions.py
